<resources>
    <string name="app_name">NavGo</string>
    <string name="nav_txt">Navegação</string>
    <string name="config_txt">Configuração</string>
    <string name="gnss_txt">Gnss</string>
    <string name="credito_txt">Créditos</string>
    <string name="textcredito_txt">Sistema de Navegação versão 1.0</string>
    <string name="histo_txt">Histórico</string>
    <string name="rd_1_txt">DDDºDDDDD</string>
    <string name="rd_2_txt">DDDº MM.MMM\'</string>
    <string name="rd_3_txt">DDDº MM\' SS\'\'</string>
    <string name="txtformato">Formato da coordenada</string>
    <string name="txtunidade_txt">Unidade de apresentação</string>
    <string name="rdKM_txt">Km/h</string>
    <string name="rdMH_txt">Mph</string>
    <string name="txtOrient_txt">Orientação do mapa</string>
    <string name="rdNen_txt">Nenhuma</string>
    <string name="rdCourse_txt">Course up</string>
    <string name="rdNorth_txt">North up</string>
    <string name="txtTipo_txt">Tipo do mapa</string>
    <string name="rdVetor_txt">Vetorial</string>
    <string name="rdImg_txt">Imagem de Satélite</string>
    <string name="txtInfo_txt">Informações de tráfego</string>
    <string name="txtProgramador1_txt">Davi Freitas Oliveira</string>
    <string name="txtProgramador2_txt">Gesser Pascoal Nunes Leal Filho</string>
    <string name="txtProgramador3_txt">Pedro Henrique Da Silva Campos</string>
    <string name="txtTituloProg">Desenvolvedores</string>
    <string name="txt_titleCred">Sobre</string>
    <string name="txtProgramador4_txt">Matheus Filipe Chaves da Cruz</string>
    <string name="txtProgramador5_txt">Alexandre Nunes Brito</string>
    <string name="txtTituloConfig">Config.</string>
    <string name="txtSist">Sistema</string>
    <string name="txtSistVers">Mínimo requerido Android 5.0(Lollipop)</string>
    <string name="txtSistTest">Testes feitos no Android 5.0; 9.0 e 11.0</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="title_activity_historico" translatable="false">Historico</string>
    <string name="tituloLongitude">Longitude:</string>
    <string name="tituloLatitude">Latitude:</string>
    <string name="tituloVelocidade">Velocidade:</string>
    <string name="tituloBearing">Bearing:</string>
    <string name="tituloNumeroGnss">Informação sobre o sistema GNSS:</string>
    <string name="txtTituloLog">Localizações</string>
</resources>