<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_alignParentTop="true"
    android:background="@drawable/fundo">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/fundo">


        <TextView
            android:id="@+id/titulo_latitude"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:text="@string/tituloLatitude"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_latitude"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/titulo_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/titulo_longitude"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/titulo_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:text="@string/tituloLongitude"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_longitude"
            app:layout_constraintStart_toEndOf="@id/titulo_longitude"
            app:layout_constraintTop_toBottomOf="@id/titulo_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="7dp"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/titulo_velocidade"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/titulo_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:text="@string/tituloVelocidade"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/text_Velocidade"
            app:layout_constraintStart_toEndOf="@id/titulo_velocidade"
            app:layout_constraintTop_toBottomOf="@id/titulo_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="7dp"
            android:textColor="@color/black"
            android:textSize="16sp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.Toolbar>