<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo">

    <View
        android:id="@+id/containerComponentsCoordenada"
        style="@style/containerComponentsCoordenadas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/map"/>

    <TextView
        android:id="@+id/titulo_latitude"
        app:layout_constraintTop_toTopOf="@id/containerComponentsCoordenada"
        app:layout_constraintStart_toStartOf="@id/containerComponentsCoordenada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/tituloLatitude"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_latitude"
        app:layout_constraintTop_toTopOf="@id/containerComponentsCoordenada"
        app:layout_constraintStart_toEndOf="@+id/titulo_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/titulo_longitude"
        app:layout_constraintStart_toStartOf="@id/containerComponentsCoordenada"
        app:layout_constraintTop_toTopOf="@id/titulo_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/tituloLongitude"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_longitude"
        app:layout_constraintStart_toEndOf="@id/titulo_longitude"
        app:layout_constraintTop_toBottomOf="@id/titulo_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/titulo_velocidade"
        app:layout_constraintStart_toStartOf="@id/containerComponentsCoordenada"
        app:layout_constraintTop_toTopOf="@id/titulo_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:text="@string/tituloVelocidade"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/text_Velocidade"
        app:layout_constraintStart_toEndOf="@id/titulo_velocidade"
        app:layout_constraintTop_toBottomOf="@id/titulo_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="400dp"
        android:layout_height="500dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerComponentsCoordenada"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>



